change the logic of localizations

--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -1,156 +1,111 @@
 {
-    "generic": {
-      "next": "Avanti",
-      "access": "Accedi",
-      "notificationDefaultChannel": "Notifiche in arrivo",
-      "notificationDescriptionDefaultChannel": "Aggiornamenti sull' app @@",
-      "genericError": "Errore imprevisto",
-      "logout": "Logout",
-      "continueTxt": "Continua",
-      "skip": "Salta",
-      "login": "Accedi",
-      "signup": "Registrati",
-      "cancel": "Annulla",
-      "welcome": "Benvenuto",
-      "username": "Username",
-      "email": "Email",
-      "password": "Password",
-      "confirmEmail": "Conferma email",
-      "confirmPassword": "Conferma password",
-      "name": "Nome",
-      "surname": "Cognome",
-      "backToLogin": "Torna alla login",
-      "save": "Salva",
-      "areYourSure": "Sei sicuro?",
-      "profile": "Profilo",
-      "home": "Home",
-      "updates": "Aggiornamenti"
-    },
-    "textFieldValidations": {
-      "textFormFieldEmpty": "Questo campo non può essere vuoto",
-      "maxLenght": "La lunghezza massima è di @@ caratteri",
-      "wrongCharacters": "Caratteri non validi.",
-      "weakPassword": "Password troppo debole",
-      "emailAlreadyInUse": "Questa mail è già in uso",
-      "invalidEmail": "Email non valida",
-      "emptySpace": "Hai inserito uno spazio vuoto nella mail",
-      "passwordsDontMatch": "Le password non corrispondono",
-      "emailsDontMatch": "Le email non corrispondono"
-    },
-    "textFormFieldHints": {
-      "confirmNewPassword": "Conferma la password",
-      "password": "*******",
-      "insertNewPassword": "Nuova password",
-      "insertOldPassword": "Vecchia password",
-      "email": "Es. nome.cognome@email.com",
-      "name": "Nome",
-      "surname": "Cognome",
-      "editPassword": "Cambia password"
-    },
-    "tutorial": {
-      "tutorialFirstMessageTitle": "Lorem ipsum 1",
-      "tutorialFirstMessageDescription": "Lorem ipsum 1",
-      "tutorialSecondMessageTitle": "Lorem ipsum 2",
-      "tutorialSecondMessageDescription": "Lorem ipsum 2",
-      "tutorialThirdMessageTitle": "Lorem ipsum 3",
-      "tutorialThirdMessageDescription": "Lorem ipsum 3"
-    },
-    "profilePage": {
-      "editPersonalData": "Modifica dati personali",
-      "settings": "Impostazioni",
-      "support": "Supporto",
-      "privacyPolicy": "Privacy Policy",
-      "changeProfileImage": "Cambia immagine del profilo",
-      "username": "Username",
-      "editPassword": "Modifica password",
-      "name": "Nome",
-      "surname": "Cognome",
-      "email": "Email",
-      "city": "Città",
-      "genre": "Genere",
-      "darkTheme": "Tema alternativo",
-      "darkThemeDescription": "Prova ora l'app con un colore diverso!",
-      "accessibility": "Accessibilità",
-      "accessibilityDescription": "Lorem ipsum dolor sic amet",
-      "aboutMe": "About me",
-      "phoneNumber": "Numero di telefono",
-      "nameAndSurname": "Nome e cognome",
-      "resetPassword": "Reset password",
-      "changePersonalInfos": "Modifica informazioni personali",
-      "atTheMomentYouCantChangeEmail": "Al momento non è possibile modificare l'email!",
-      "myDatas": "I miei dati",
-      "logout": "Logout"
-    },
-    "signupPage": {
-      "signupCompleted": "Registrazione completata!",
-      "signup": "Registrazione",
-      "title": "Crea il tuo account:",
-      "signupViaMail": "Registrati via Email",
-      "signupWithGoogle": "Registrati con Google",
-      "signupWithFacebook": "Registrati con Facebook",
-      "clickingYouAccept": "Cliccando accetti",
-      "termsAndConditions": "Termini e Condizioni\n",
-      "andAlso": "e la",
-      "privacyPolicy": "Privacy Policy",
-      "createAccount": "Crea account",
-      "privacyPolicy1": "Ho letto la vostra informativa sulla privacy ai sensi dell'art. 13 del GDPR. Ho compreso le finalità di cui al punto 2.A e le basi giuridiche per cui è necessario il trattamento e legittimo, anche senza il consenso dei soli dati indicati come obbligatori. In riferimento al trattamento dei miei dati personali, per cui si richiede il consenso come esplicitato nelle modalità e finalità indicate",
-      "privacyPolicy2B0": "Acconsento al trattamento di altri dati particolari necessari per i servizi richiesti",
-      "privacyPolicy2B1": "Trattamento dei dati per migliorare i servizi",
-      "privacyPolicy2B2": "Marketing e/o commerciali",
-      "privacyPolicy2B3": "Profilazione semi-automatizzata - finalizzate all'invio di consigli sulla nutrizione e/o offerte promozionali specifiche pertinenti agli obiettivi delle diete degli interessati registrati",
-      "checkEmail": "Controlla la tua mail!",
-      "sentToEmail": "Abbiamo inviato una mail con un link di conferma\na questa mail:",
-      "checkSpam": "Se non la ricevi entro 5 minuti, perfavore controlla nello Spam.",
-      "notReceived": "Non hai ricevuto l'email?",
-      "sendAgain": "Invia di nuovo",
-      "gdpr": "Manifestazione del consenso trattamento dati – Privacy - (GDPR 679/2016)",
-      "acceptPrivacy": "Per continuare accetta i nostri Termini e condizioni e la nostra Privacy Policy",
-      "privacyTitle": "Privacy e dati personali"
-    },
-    "loginPage": {
-      "title": "Login",
-      "access": "Accedi",
-      "welcomeBack": "Bentornato!",
-      "accessViaMail": "Accedi via Email",
-      "accessWithGoogle": "Accedi con Google",
-      "accessWithFacebook": "Accedi con Facebook",
-      "clickingYouAccept": "Cliccando accetti",
-      "termsAndConditions": "Termini e Condizioni\n",
-      "andAlso": "e la",
-      "privacyPolicy": "Privacy Policy",
-      "loginPageDescription": "Lorem ipsum dolor sic amet",
-      "forgotPassword": "Hai dimenticato la password?",
-      "recoverPassword": "Recupera password",
-      "insertEmailToRecoverPwd": "Inserisci l'email per cui vuoi recuperare la password.",
-      "recover": "Recupera",
-      "newUser": "Nuovo utente?",
-      "noUserFoundForThisEmail": "Non è stato trovato nessun utente con questa email",
-      "wrongPasswordForThisUser": "La password inserita non è corretta",
-      "notVerifiedEmail": "Email non verificata per questo utente",
-      "tooManyAccessTempt": "Attenzione hai fatto troppi tentativi di accesso. Per favore riprova più tardi.",
-      "errorInSendingNewPassword": "C'è stato un errore nell'invio della nuova password",
-      "messageInSendingNewPassword": "Abbiamo inviato un'email per il recupero della password",
-      "noUserFoundForRecoverPassword": "Nessun utente trovato per l'email inserita",
-      "email": "Email",
-      "password": "Password",
-      "dontHaveAnAccount": "Non hai un account?",
-      "signupHere": "Registrati qui",
-      "orAccessWith": "Oppure accedi con"
-    },
-    "accessPage": {
-      "doYouAlreadyHaveAnAccount": "Hai già un account?",
-      "access": "Accedi",
-      "title": "Lorem ipsum",
-      "description": "Lorem ipsum",
-      "letsStart": "Iniziamo!",
-      "signup": "Registrati"
-    },
-    "startPage": {
-      "title": "CodeBaker",
-      "caption": "Boilerplate!",
-      "start": "Inizia"
-    },
-    "homePage": {
-      "welcome": "Benvenuto"
-    }
+  "next":"Avanti",
+  "access":"Accedi",
+  "notificationDefaultChannel":"Notifiche in arrivo",
+  "notificationDescriptionDefaultChannel":"Aggiornamenti sull'app @@",
+  "genericError":"Errore imprevisto",
+  "logout":"Esci",
+  "continueTxt":"Continua",
+  "skip":"Salta",
+  "login":"Accedi",
+  "signup":"Registrati",
+  "cancel":"Annulla",
+  "welcome":"Benvenuto",
+  "username":"Nome utente",
+  "email":"es. nome.cognome@email.com",
+  "password":"*******",
+  "confirmEmail":"Conferma email",
+  "confirmPassword":"Conferma password",
+  "name":"Nome",
+  "surname":"Cognome",
+  "backToLogin":"Torna al login",
+  "save":"Salva",
+  "areYourSure":"Sei sicuro?",
+  "profile":"Profilo",
+  "home":"Home",
+  "updates":"Aggiornamenti",
+  "textFormFieldEmpty":"Questo campo non può essere vuoto",
+  "maxLenght":"La lunghezza massima è di @@ caratteri",
+  "wrongCharacters":"Caratteri non validi",
+  "weakPassword":"Password troppo debole",
+  "emailAlreadyInUse":"Questa email è già in uso",
+  "invalidEmail":"Email non valida",
+  "emptySpace":"Hai inserito uno spazio vuoto nell'email",
+  "passwordsDontMatch":"Le password non corrispondono",
+  "emailsDontMatch":"Le email non corrispondono",
+  "confirmNewPassword":"Conferma la password",
+  "insertNewPassword":"Nuova password",
+  "insertOldPassword":"Vecchia password",
+  "editPassword":"Modifica password",
+  "tutorialFirstMessageTitle":"Lorem ipsum 1",
+  "tutorialFirstMessageDescription":"Lorem ipsum 1",
+  "tutorialSecondMessageTitle":"Lorem ipsum 2",
+  "tutorialSecondMessageDescription":"Lorem ipsum 2",
+  "tutorialThirdMessageTitle":"Lorem ipsum 3",
+  "tutorialThirdMessageDescription":"Lorem ipsum 3",
+  "editPersonalData":"Modifica dati personali",
+  "settings":"Impostazioni",
+  "support":"Supporto",
+  "privacyPolicy":"Informativa sulla privacy",
+  "changeProfileImage":"Cambia immagine profilo",
+  "city":"Città",
+  "genre":"Genere",
+  "darkTheme":"Tema scuro",
+  "darkThemeDescription":"Prova l'app con un colore diverso!",
+  "accessibility":"Accessibilità",
+  "accessibilityDescription":"Lorem ipsum dolor sit amet",
+  "aboutMe":"Su di me",
+  "phoneNumber":"Numero di telefono",
+  "nameAndSurname":"Nome e cognome",
+  "resetPassword":"Reimposta password",
+  "changePersonalInfos":"Modifica informazioni personali",
+  "atTheMomentYouCantChangeEmail":"Al momento non puoi modificare l'email!",
+  "myDatas":"I miei dati",
+  "signupCompleted":"Registrazione completata!",
+  "title":"Crea il tuo account:",
+  "signupViaMail":"Registrati via Email",
+  "signupWithGoogle":"Registrati con Google",
+  "signupWithFacebook":"Registrati con Facebook",
+  "clickingYouAccept":"Cliccando accetti",
+  "termsAndConditions":"Termini e Condizioni\n",
+  "andAlso":"e anche",
+  "createAccount":"Crea account",
+  "privacyPolicy1":"Ho letto l'informativa sulla privacy ai sensi dell'art. 13 del GDPR. Ho compreso le finalità di cui al punto 2.A e le basi giuridiche per cui il trattamento è necessario e legittimo, anche senza consenso dei soli dati indicati come obbligatori. Con riferimento al trattamento dei miei dati personali, per i quali viene richiesto il consenso come spiegato nelle modalità e finalità indicate",
+  "privacyPolicy2B0":"Acconsento al trattamento di altri dati specifici necessari per i servizi richiesti",
+  "privacyPolicy2B1":"Trattamento dei dati per migliorare i servizi",
+  "privacyPolicy2B2":"Marketing e/o commerciale",
+  "privacyPolicy2B3":"Profilazione semi-automatizzata - finalizzata all'invio di consigli nutrizionali e/o offerte promozionali specifiche pertinenti agli obiettivi dietetici degli utenti registrati",
+  "checkEmail":"Controlla la tua email!",
+  "sentToEmail":"Abbiamo inviato un'email con un link di conferma\na questa email:",
+  "checkSpam":"Se non la ricevi entro 5 minuti, controlla nella cartella Spam.",
+  "notReceived":"Non hai ricevuto l'email?",
+  "sendAgain":"Invia di nuovo",
+  "gdpr":"Espressione del consenso al trattamento dei dati - Privacy - (GDPR 679/2016)",
+  "acceptPrivacy":"Per continuare, accetta i nostri Termini e Condizioni e l'Informativa sulla Privacy",
+  "privacyTitle":"Privacy e dati personali",
+  "accessViaMail":"Accedi via Email",
+  "accessWithGoogle":"Accedi con Google",
+  "accessWithFacebook":"Accedi con Facebook",
+  "loginPageDescription":"Lorem ipsum dolor sit amet",
+  "forgotPassword":"Password dimenticata?",
+  "recoverPassword":"Recupera password",
+  "insertEmailToRecoverPwd":"Inserisci l'email per la quale vuoi recuperare la password.",
+  "recover":"Recupera",
+  "newUser":"Nuovo utente?",
+  "noUserFoundForThisEmail":"Nessun utente trovato con questa email",
+  "wrongPasswordForThisUser":"La password inserita non è corretta",
+  "notVerifiedEmail":"Email non verificata per questo utente",
+  "tooManyAccessTempt":"Troppi tentativi di accesso. Riprova più tardi.",
+  "errorInSendingNewPassword":"Errore nell'invio della nuova password",
+  "messageInSendingNewPassword":"Abbiamo inviato un'email per il recupero della password",
+  "noUserFoundForRecoverPassword":"Nessun utente trovato per l'email inserita",
+  "dontHaveAnAccount":"Non hai un account?",
+  "signupHere":"Registrati qui",
+  "orAccessWith":"Oppure accedi con",
+  "doYouAlreadyHaveAnAccount":"Hai già un account?",
+  "description":"Lorem ipsum",
+  "letsStart":"Iniziamo!",
+  "caption":"Boilerplate!",
+  "start":"Inizia",
+  "welcomeBack":"Bentornato!"
   }
